--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 	},
 	"require": {
 		"php": ">=7.0.0",
+		"devbackend/authgram-request-handler": "^1.0",
 		"devbackend/webhooker": "^1.0",
 		"phpseclib/phpseclib": "^2.0"
 	}
